--- a/blog_post_1.html
+++ b/blog_post_1.html
@@ -1,146 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Advanced Trading Strategies</title>
-  <!-- MathJax for formulas -->
-  <script>
-    window.MathJax = { tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] } };
-  </script>
-  <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <style>
-    :root {
-      --bg: #ffffff;
-      --text: #0f172a;   /* slate-900 */
-      --muted: #475569;  /* slate-600 */
-      --accent: #111827; /* gray-900 */
-      --card: #f8fafc;   /* slate-50 */
-      --border: #e2e8f0; /* slate-200 */
-    }
-    * { box-sizing: border-box; }
-    html, body { margin: 0; padding: 0; background: var(--bg); color: var(--text); font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; line-height: 1.65; }
-    a { color: var(--accent); text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    .container { max-width: 1080px; margin: 3rem auto; padding: 0 1.25rem; }
-    header { margin-bottom: 2rem; }
-    h1 { font-size: 2.2rem; margin: 0 0 0.25rem; letter-spacing: -0.02em; }
-    .subtitle { color: var(--muted); margin-top: 0.25rem; }
-    section { background: var(--card); border: 1px solid var(--border); border-radius: 16px; padding: 1.25rem; margin: 1rem 0 1.25rem; }
-    h2 { font-size: 1.25rem; margin: 0 0 0.5rem; }
-    .lead { color: var(--muted); margin-top: 0.25rem; }
-    .formula { background: #fff; border: 1px dashed var(--border); border-radius: 12px; padding: 0.75rem 1rem; margin: 0.85rem 0; overflow-x: auto; }
-    ul { margin: 0.5rem 0 0.75rem 1.1rem; }
-    .badge { display: inline-block; font-size: 0.8rem; background: #fff; border: 1px solid var(--border); border-radius: 999px; padding: 0.15rem 0.6rem; margin-right: 0.35rem; color: var(--muted); }
-    code { background: #fff; border: 1px solid var(--border); border-radius: 6px; padding: 0.1rem 0.35rem; }
-    footer { color: var(--muted); font-size: 0.9rem; margin-top: 2rem; text-align: center; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quant Dashboard Pro</title>
+
+<!-- Google Fonts & Font Awesome -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<!-- Plotly -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+<style>
+:root {
+    --primary: #2563eb;
+    --secondary: #374151;
+    --bg-light: #f4f6f8;
+    --bg-dark: #1f2937;
+    --text-light: #ffffff;
+    --text-dark: #111827;
+}
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background: var(--bg-light);
+    color: var(--text-dark);
+    transition: all 0.3s;
+}
+body.dark {
+    background: var(--bg-dark);
+    color: var(--text-light);
+}
+.sidebar {
+    height: 100vh;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--secondary);
+    padding-top: 20px;
+    transition: width 0.3s;
+}
+.sidebar a {
+    display: flex;
+    align-items: center;
+    padding: 15px 20px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #d1d5db;
+    transition: 0.2s;
+    border-radius: 8px;
+    margin: 5px 10px;
+}
+.sidebar a i { margin-right: 10px; }
+.sidebar a:hover { background-color: #4b5563; color: #fff; }
+.main { margin-left: 260px; padding: 20px; }
+.section { display: none; animation: fadeIn 0.5s; }
+.section.active { display: block; }
+@keyframes fadeIn { from {opacity: 0;} to {opacity: 1;} }
+
+.app-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+.app-card {
+    background: linear-gradient(145deg, #fff, #e0e7ff);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s, background 0.3s;
+    position: relative;
+}
+body.dark .app-card {
+    background: linear-gradient(145deg, #374151, #1f2937);
+}
+.app-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+}
+.app-card i { font-size: 40px; margin-bottom: 10px; color: var(--primary); }
+.status-badge {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: gray;
+}
+.status-online { background: #22c55e; }
+.status-offline { background: #ef4444; }
+
+/* Modal Login */
+.modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0;
+    width: 100%; height: 100%; background: rgba(0,0,0,0.6);
+    justify-content: center; align-items: center;
+}
+.modal-content {
+    background: #fff; padding: 30px; border-radius: 12px;
+    width: 400px; max-width: 90%; text-align: center;
+}
+.modal-content input {
+    width: 80%; padding: 10px; margin: 10px 0;
+    border-radius: 6px; border: 1px solid #ccc;
+}
+.modal-content button {
+    padding: 10px 20px; background: var(--primary);
+    color: #fff; border: none; border-radius: 6px; cursor: pointer;
+}
+.modal-content button:hover { background: #1d4ed8; }
+
+/* Chart container */
+#chartContainer { width: 100%; height: 400px; margin-top: 20px; }
+</style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Advanced Trading Strategies</h1>
-      <p class="subtitle">Quant-driven approaches with key mathematical formulas</p>
-      <div>
-        <span class="badge">Momentum</span>
-        <span class="badge">Stat-Arb</span>
-        <span class="badge">Vol-Arb</span>
-        <span class="badge">Gamma</span>
-        <span class="badge">Machine Learning</span>
-      </div>
-    </header>
 
-    <!-- 1. Trend Following -->
-    <section id="trend-following">
-      <h2>1. Trend Following Strategies</h2>
-      <p class="lead">We analyze 10–20 years of price data to uncover persistent market direction using adaptive, non‑linear models such as Genetic Algorithms, SVMs, and ANNs.</p>
-      <ul>
-        <li><strong>Momentum signal (simple):</strong> $M_t = P_t - P_{t-L}$</li>
-        <li><strong>Dual moving average rule:</strong> Go long if $\mathrm{SMA}_{\text{fast}}(t) > \mathrm{SMA}_{\text{slow}}(t)$</li>
-        <li><strong>SVM decision function:</strong> $f(\mathbf{x}) = \operatorname{sign}\!\left(\sum_{i=1}^{n} 
-          \alpha_i y_i \, K(\mathbf{x}_i, \mathbf{x}) + b\right)$</li>
-        <li><strong>ANN layer mapping:</strong> $\mathbf{a}^{(\ell)} = \sigma\!\left(\mathbf{W}^{(\ell)} \mathbf{a}^{(\ell-1)} + \mathbf{b}^{(\ell)}\right)$</li>
-      </ul>
-      <div class="formula">Signal-to-noise via information ratio:
-        $$\mathrm{IR} = \frac{\mathbb{E}[R_p - R_b]}{\sqrt{\operatorname{Var}(R_p - R_b)}}$$
-      </div>
-    </section>
+<div class="sidebar">
+    <a href="#" onclick="showSection('home')"><i class="fas fa-home"></i> Home</a>
+    <a href="#" onclick="showSection('apps')"><i class="fas fa-th-large"></i> Apps</a>
+    <a href="#" onclick="showSection('analytics')"><i class="fas fa-chart-line"></i> Analytics</a>
+    <a href="#" onclick="showSection('reports')"><i class="fas fa-file-alt"></i> Reports</a>
+    <a href="#" onclick="showSection('settings')"><i class="fas fa-cog"></i> Settings</a>
+    <a href="#" onclick="showSection('help')"><i class="fas fa-question-circle"></i> Help</a>
+    <a href="#" id="loginBtn" onclick="openLoginModal()"><i class="fas fa-user"></i> Login</a>
+    <a href="#" onclick="toggleTheme()"><i class="fas fa-adjust"></i> Toggle Theme</a>
+</div>
 
-    <!-- 2. Mean Reversion / Stat Arb -->
-    <section id="mean-reversion">
-      <h2>2. Mean Reversion Strategies (Statistical Arbitrage)</h2>
-      <p class="lead">We construct market‑neutral long/short spreads from cointegrated instruments and size trades by mean‑reversion speed.</p>
-      <ul>
-        <li><strong>Cointegration (Engle–Granger):</strong> For two price series $(X_t, Y_t)$, estimate $Y_t = \beta X_t + u_t$. If $u_t$ is stationary (ADF rejects unit root), the spread $u_t$ is tradeable.</li>
-      </ul>
-      <div class="formula">Ornstein–Uhlenbeck (OU) process for spread $X_t$:
-        $$\mathrm{d}X_t = \kappa(\mu - X_t)\,\mathrm{d}t + \sigma\,\mathrm{d}W_t$$
-        <div>Half‑life of mean reversion:
-          $$t_{1/2} = \frac{\ln 2}{\kappa}$$
-        </div>
-      </div>
-      <div class="formula">Discrete‑time estimation via AR(1):
-        $$\Delta X_t = X_t - X_{t-1} = \phi - \kappa X_{t-1} + \varepsilon_t \;\Rightarrow\; \hat{\kappa} = -\widehat{\text{slope}}\;.$$
-      </div>
-      <ul>
-        <li><strong>z‑score entry/exit:</strong> $z_t = \dfrac{X_t - \hat{\mu}}{\hat{\sigma}}$; enter at $|z_t| > z_\text{in}$, exit at $|z_t| < z_\text{out}$.</li>
-      </ul>
-    </section>
+<div class="main">
+    <div id="home" class="section active">
+        <h1>Welcome to Quant Dashboard Pro</h1>
+        <p>Explore apps, analytics, and reports with real-time insights.</p>
+    </div>
 
-    <!-- 3. Volatility Arbitrage -->
-    <section id="vol-arb">
-      <h2>3. Volatility Arbitrage Strategies</h2>
-      <p class="lead">Exploit gaps between implied volatility (IV) and realized volatility (RV) while managing Greeks in a delta‑neutral book.</p>
-      <div class="formula">Realized variance (close‑to‑close):
-        $$\mathrm{RV} = \sum_{t=1}^{T} r_t^2, \quad r_t = \ln\!\left(\frac{P_t}{P_{t-1}}\right)$$
-      </div>
-      <div class="formula">Delta‑neutrality and Greeks:
-        $$\sum_i w_i\,\Delta_i = 0,\qquad \Gamma = \frac{\partial \Delta}{\partial S},\qquad \Theta = \frac{\partial V}{\partial t},\qquad \text{Vega} = \frac{\partial V}{\partial \sigma}$$
-      </div>
-      <div class="formula">First‑order P&amp;L approximation for an options book $V$:
-        $$\mathrm{d}V \approx \Delta\,\mathrm{d}S + \tfrac{1}{2}\,\Gamma\,(\mathrm{d}S)^2 + \text{Vega}\,\mathrm{d}\sigma + \Theta\,\mathrm{d}t$$
-      </div>
-      <ul>
-        <li><strong>Smile exploitation:</strong> Short overpriced OTM (high IV) and long relatively underpriced strikes; rebalance to keep $\sum w_i\,\Delta_i \approx 0$.</li>
-      </ul>
-    </section>
+    <div id="apps" class="section">
+        <h2>Streamlit Apps</h2>
+        <div class="app-grid" id="appGrid"></div>
+    </div>
 
-    <!-- 4. Gamma Scalping -->
-    <section id="gamma-scalping">
-      <h2>4. Gamma Scalping Strategies</h2>
-      <p class="lead">Harvest convexity from positive gamma while re‑hedging delta as price moves.</p>
-      <div class="formula">With frequent re‑hedging of $\Delta$, expected scalping P&amp;L from convexity over small horizon:
-        $$\mathbb{E}[\mathrm{P\&L}] \approx \tfrac{1}{2}\,\Gamma\,\mathbb{E}[(\Delta S)^2] - \text{(financing/theta costs)}$$
-      </div>
-      <ul>
-        <li><strong>Sign of gamma:</strong> Long options $\Rightarrow \Gamma>0$ (benefit from large moves); short options $\Rightarrow \Gamma<0$.</li>
-        <li><strong>Dynamic hedging rule:</strong> After price change $\Delta S$, update hedge by $\Delta h \approx \Gamma\,\Delta S$ to restore $\Delta\!\approx 0$.</li>
-      </ul>
-    </section>
+    <div id="analytics" class="section">
+        <h2>Analytics</h2>
+        <div id="chartContainer"></div>
+    </div>
 
-    <!-- 5. Machine Learning -->
-    <section id="ml-strategies">
-      <h2>5. Machine Learning‑Based Strategies</h2>
-      <p class="lead">Supervised DNNs for direction classification and unsupervised clustering for regime discovery.</p>
-      <div class="formula">Binary cross‑entropy (logistic head):
-        $$\mathcal{L}(\theta) = -\big[y\,\log p_\theta(\text{up}|\mathbf{x}) + (1-y)\,\log (1-p_\theta(\text{up}|\mathbf{x}))\big]$$
-      </div>
-      <div class="formula">K‑Means objective:
-        $$\min_{\{\mu_k\}} \sum_{k=1}^{K} \sum_{\mathbf{x}_i \in C_k} \lVert \mathbf{x}_i - \mu_k \rVert^2$$
-      </div>
-      <ul>
-        <li><strong>Regime labels (unsupervised):</strong> Apply K‑Means to volatility/return features; map clusters to regimes (e.g., <em>low‑vol trend</em>, <em>high‑vol chop</em>).</li>
-        <li><strong>Regularization:</strong> L2 weight decay $\lambda\lVert\theta\rVert_2^2$ and dropout stabilize noisy financial features.</li>
-      </ul>
-    </section>
+    <div id="reports" class="section">
+        <h2>Reports</h2>
+        <p>Download reports and CSV files here.</p>
+    </div>
 
-    <footer>
-      © <span id="year"></span> Advanced Trading Strategies 
-    </footer>
-  </div>
+    <div id="settings" class="section">
+        <h2>Settings</h2>
+        <p>Adjust dashboard preferences and themes.</p>
+    </div>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+    <div id="help" class="section">
+        <h2>Help</h2>
+        <p>Documentation, tutorials, and support links.</p>
+    </div>
+</div>
+
+<div class="modal" id="loginModal">
+    <div class="modal-content">
+        <h2>Login</h2>
+        <input type="text" id="username" placeholder="Username"><br>
+        <input type="password" id="password" placeholder="Password"><br>
+        <button onclick="login()">Login</button>
+    </div>
+</div>
+
+<script>
+const appGrid = document.getElementById('appGrid');
+
+// Create 20 apps (ports 8501 - 8520)
+const runningApps = Array.from({length:21}, (_,i)=> i+1);
+
+runningApps.forEach(i => {
+    const port = 8500 + i; // Correct port: 8501, 8502 ... 8520
+    const card = document.createElement('div');
+    card.className = 'app-card';
+    card.innerHTML = `
+        <i class="fas fa-rocket"></i>
+        <h3>App ${i}</h3>
+        <div class="status-badge" id="status${i}"></div>
+    `;
+    card.onclick = () => window.open(`http://192.168.31.38:${port}/`, '_blank');
+    appGrid.appendChild(card);
+
+    // Status check
+    fetch(`http://192.168.31.38:${port}/`)
+        .then(r => document.getElementById(`status${i}`).classList.add('status-online'))
+        .catch(err => document.getElementById(`status${i}`).classList.add('status-offline'));
+});
+
+// Section switching
+function showSection(id){
+    document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+}
+
+// Login
+const loginModal = document.getElementById('loginModal');
+function openLoginModal(){ loginModal.style.display='flex'; }
+window.onclick = e => { if(e.target==loginModal) loginModal.style.display='none'; }
+function login(){
+    const user=document.getElementById('username').value;
+    const pass=document.getElementById('password').value;
+    if(user==='admin' && pass==='password'){
+        alert('Login successful');
+        loginModal.style.display='none';
+        document.getElementById('loginBtn').innerText='Logout';
+        document.getElementById('loginBtn').onclick=()=>{location.reload()};
+    }else{ alert('Invalid credentials'); }
+}
+
+// Theme toggle
+function toggleTheme(){ document.body.classList.toggle('dark'); }
+
+// Plotly Chart
+const chartData = [{
+    x: ['Jan','Feb','Mar','Apr','May','Jun'],
+    y: [10,15,13,17,22,19],
+    type: 'scatter',
+    mode: 'lines+markers',
+    marker: {color:'#2563eb'}
+}];
+const layout = {title:'Sample Analytics', paper_bgcolor:'rgba(0,0,0,0)', plot_bgcolor:'rgba(0,0,0,0)'};
+Plotly.newPlot('chartContainer', chartData, layout, {responsive:true});
+</script>
 </body>
 </html>
