--- a/blog_post_P2_bk.html
+++ b/blog_post_P2_bk.html
@@ -1,173 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Heston Model Calibration for Volatility</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Trading Portal</title>
 
-  <!-- MathJax for Mathematical Rendering -->
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async
-    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<!-- Fonts & Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-  <style>
-    :root {
-      --primary-color: #1a237e;
-      --background-color: #f4f6f8;
-      --container-bg: #ffffff;
-      --text-color: #2c3e50;
-      --heading-color: #37474f;
-    }
+<style>
+:root {
+  --primary:#1e3a8a;
+  --secondary:#2563eb;
+  --accent:#ef4444;
+  --bg:#f4f6f8;
+  --text:#111;
+  --card-bg:#fff;
+}
+body { margin:0; font-family:'Roboto', sans-serif; background:var(--bg); color:var(--text); transition:0.3s; }
+header { background:var(--primary); color:white; padding:15px 20px; display:flex; justify-content:space-between; align-items:center; }
+header h1 { margin:0; font-size:1.8em; }
+.logout-btn, .theme-btn { background:var(--accent); padding:8px 12px; border:none; border-radius:5px; color:white; cursor:pointer; font-weight:500; margin-left:5px; }
+.logout-btn:hover, .theme-btn:hover { background:#b91c1c; }
 
-    * {
-      box-sizing: border-box;
-    }
+/* Sidebar */
+#sidebar { height:100vh; width:250px; background:var(--secondary); position:fixed; top:0; left:0; padding-top:80px; overflow-y:auto; transition:0.3s; }
+#sidebar.hidden { width:0; padding:0; }
+#sidebar a { display:block; color:white; padding:12px 20px; text-decoration:none; font-weight:500; transition:0.2s; }
+#sidebar a:hover { background:#1e40af; }
+.sidebar-section { cursor:pointer; padding:12px 20px; font-weight:600; display:flex; justify-content:space-between; align-items:center; }
+.sidebar-content { display:none; }
 
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: var(--background-color);
-      color: var(--text-color);
-      margin: 0;
-      padding: 0;
-    }
+/* Pages */
+.page { margin-left:250px; padding:20px; display:none; transition:0.3s; }
+.page.active { display:block; }
+.login-page { display:flex; justify-content:center; align-items:center; height:100vh; }
+.login-form { background:var(--card-bg); padding:30px; border-radius:10px; box-shadow:0 4px 8px rgba(0,0,0,0.2); width:300px; }
+.login-form input { width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #ccc; }
+.login-form button { width:100%; padding:10px; background:var(--secondary); color:white; border:none; border-radius:5px; cursor:pointer; font-weight:500; }
+.login-form button:hover { background:var(--primary); }
 
-    .container {
-      max-width: 960px;
-      margin: auto;
-      padding: 2em 1.5em;
-      background-color: var(--container-bg);
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-    }
+/* Card Design */
+.card-container { display:flex; flex-wrap:wrap; gap:20px; margin-top:20px; }
+.card { background:var(--card-bg); padding:20px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.15); flex:1 1 250px; min-width:250px; transition:0.3s; cursor:pointer; }
+.card:hover { transform:translateY(-5px); box-shadow:0 8px 20px rgba(0,0,0,0.25); }
+.card h4 { margin:10px 0; font-weight:500; }
 
-    h1, h2 {
-      color: var(--primary-color);
-      margin-bottom: 0.6em;
-    }
+/* Table */
+table { width:100%; border-collapse:collapse; margin-top:15px; }
+th, td { border:1px solid #ccc; padding:8px; text-align:center; }
+th { background:var(--secondary); color:white; cursor:pointer; }
+tr:nth-child(even) { background:#f2f2f2; }
 
-    h1 {
-      text-align: center;
-      font-size: clamp(1.8rem, 3vw, 2.4rem);
-    }
-
-    h2 {
-      font-size: clamp(1.4rem, 2.5vw, 1.75rem);
-      color: var(--heading-color);
-      margin-top: 2em;
-    }
-
-    p, ul {
-      font-size: clamp(1rem, 2.2vw, 1.15rem);
-      line-height: 1.65;
-      margin: 1em 0;
-    }
-
-    ul {
-      padding-left: 1.4em;
-    }
-
-    code {
-      background-color: #e0e0e0;
-      padding: 0.2em 0.4em;
-      border-radius: 4px;
-      font-family: monospace;
-      font-size: 0.95em;
-    }
-
-    .equation {
-      text-align: center;
-      margin: 1.5em 0;
-      overflow-x: auto;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 2em auto 0;
-      border-radius: 8px;
-    }
-
-    @media (max-width: 600px) {
-      .container {
-        padding: 1.2em;
-        border-radius: 8px;
-      }
-
-      ul {
-        padding-left: 1em;
-      }
-    }
-  </style>
+/* Dark Mode */
+body.dark { --primary:#111827; --secondary:#1f2937; --accent:#ef4444; --bg:#1f1f1f; --text:#f0f0f0; --card-bg:#2a2a2a; }
+</style>
 </head>
-
 <body>
-  <div class="container">
-    <h1>Heston Model Calibration for Volatility</h1>
 
-    <p>
-      The Heston model is a popular stochastic volatility model used in derivative pricing, particularly for options where implied
-      volatility varies with strike and maturity. It models the underlying asset price and its variance as coupled stochastic
-      processes:
-    </p>
+<header>
+<h1>Trading Portal</h1>
+<div>
+  <button class="theme-btn" onclick="toggleTheme()"><i class="fas fa-adjust"></i></button>
+  <button class="logout-btn" onclick="logout()">Logout</button>
+</div>
+</header>
 
-    <div class="equation">
-      $$
-      \begin{aligned}
-      dS_t &= \mu S_t \, dt + \sqrt{v_t} S_t \, dW_t^S \\\\
-      dv_t &= \kappa(\theta - v_t) \, dt + \sigma \sqrt{v_t} \, dW_t^v \\\\
-      dW_t^S \cdot dW_t^v &= \rho \, dt
-      \end{aligned}
-      $$
-    </div>
-
-    <p>
-      Here, \( S_t \) is the asset price, \( v_t \) the stochastic variance, \( \kappa \) the rate of mean reversion, \( \theta \)
-      the long-run variance, \( \sigma \) the volatility of volatility, and \( \rho \) the correlation between the asset and volatility
-      shocks.
-    </p>
-
-    <h2>Calibration Approach</h2>
-    <p>
-      We calibrate the Heston model to market-observed implied volatilities using a non-linear least squares optimization:
-    </p>
-
-    <div class="equation">
-      $$
-      \text{Loss}(\vec{\theta}) = \sum_{i=1}^N \left[ \text{IV}_{\text{market}}^{(i)} - \text{IV}_{\text{Heston}}^{(i)}(\vec{\theta}) \right]^2
-      $$
-    </div>
-
-    <p>
-      where \( \vec{\theta} = (\kappa, \theta, \sigma, v_0, \rho) \) is the parameter vector. The goal is to minimize the squared
-      differences between market and model implied volatilities across a range of strikes and maturities.
-    </p>
-
-    <h2>Model Validation & Error Surface</h2>
-    <p>
-      After calibration, we analyze the stability of the estimated parameters by perturbing initial conditions and using
-      <em>bootstrapped sub-samples</em> of option chains. The error surface is visualized in 2D and 3D plots to identify
-      <strong>local minima</strong> and degeneracies in parameter space.
-    </p>
-
-    <p>
-      Additionally, we perform out-of-sample backtesting by comparing pricing errors and hedging performance against the
-      <strong>Black-Scholes</strong> and <strong>SABR</strong> models:
-    </p>
-
-    <ul>
-      <li>Black-Scholes assumes constant volatility, often underpricing OTM options.</li>
-      <li>SABR captures skew but lacks stochastic variance dynamics.</li>
-      <li>Heston performs best in capturing volatility smiles and forward skew.</li>
-    </ul>
-
-    <p>
-      The Heston model, while computationally intensive, provides superior calibration performance in capturing market
-      volatility structures. It forms the basis for advanced derivative pricing engines and risk-neutral scenario generators
-      in real-time trading systems.
-    </p>
-
-    <img src="assets/images/HS.png" alt="Heston surface example" />
+<!-- Sidebar -->
+<div id="sidebar">
+  <a onclick="showPage('home')"><i class="fas fa-home"></i> Home</a>
+  <div class="sidebar-section" onclick="toggleSection('appsSection')">
+    <span><i class="fas fa-th"></i> Apps</span> <i class="fas fa-caret-down"></i>
   </div>
+  <div id="appsSection" class="sidebar-content">
+    <!-- 20 apps -->
+    <script>
+      for(let i=1;i<=20;i++){
+        document.write(`<a onclick="openApp('app${i}')">App ${i}</a>`);
+      }
+    </script>
+  </div>
+  <a onclick="showPage('analytics')"><i class="fas fa-chart-line"></i> Analytics</a>
+  <a onclick="showPage('reports')"><i class="fas fa-file-alt"></i> Reports</a>
+  <a onclick="showPage('live')"><i class="fas fa-broadcast-tower"></i> Live Trading</a>
+</div>
+
+<!-- Pages -->
+<div id="login" class="page login-page active">
+  <div class="login-form">
+    <h2>Login</h2>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+  </div>
+</div>
+
+<div id="home" class="page">
+  <h2>Welcome to Trading Portal</h2>
+  <p>Use the sidebar to navigate between Apps, Analytics, Reports, and Live Trading sections.</p>
+</div>
+
+<div id="analytics" class="page">
+  <h2>Analytics Dashboard</h2>
+  <div class="card-container">
+    <div class="card" id="portfolioCard"><i class="fas fa-chart-line fa-2x"></i><h4>Portfolio Performance</h4><div id="portfolioChart" style="height:250px;"></div></div>
+    <div class="card" id="riskCard"><i class="fas fa-coins fa-2x"></i><h4>Risk Metrics</h4><div id="riskChart" style="height:250px;"></div></div>
+    <div class="card" id="exposureCard"><i class="fas fa-balance-scale fa-2x"></i><h4>Exposure</h4><div id="exposureChart" style="height:250px;"></div></div>
+  </div>
+</div>
+
+<div id="reports" class="page">
+  <h2>Reports</h2>
+  <div class="card-container">
+    <div class="card">
+      <i class="fas fa-file-invoice-dollar fa-2x"></i>
+      <h4>Daily P&L</h4>
+      <div id="pnlChart" style="height:250px;"></div>
+    </div>
+    <div class="card">
+      <i class="fas fa-chart-pie fa-2x"></i>
+      <h4>Risk Report</h4>
+      <div id="riskReportChart" style="height:250px;"></div>
+    </div>
+    <div class="card">
+      <i class="fas fa-file-export fa-2x"></i>
+      <h4>Trade Logs</h4>
+      <table id="tradeTable">
+        <thead><tr><th onclick="sortTable(0)">Trade ID</th><th onclick="sortTable(1)">Asset</th><th onclick="sortTable(2)">Quantity</th><th onclick="sortTable(3)">P&L</th></tr></thead>
+        <tbody>
+          <tr><td>101</td><td>SPX Option</td><td>10</td><td>500</td></tr>
+          <tr><td>102</td><td>AAPL Option</td><td>5</td><td>-150</td></tr>
+          <tr><td>103</td><td>GOOG Option</td><td>8</td><td>320</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<div id="live" class="page">
+  <h2>Live Trading Dashboard</h2>
+  <div class="card-container">
+    <div class="card">
+      <i class="fas fa-chart-line fa-2x"></i><h4>Live P&L</h4>
+      <div id="livePnlChart" style="height:250px;"></div>
+    </div>
+    <div class="card">
+      <i class="fas fa-bullseye fa-2x"></i><h4>Live Positions</h4>
+      <div id="livePositionsChart" style="height:250px;"></div>
+    </div>
+  </div>
+</div>
+
+<script>
+// Auth
+function showPage(pageId){
+  if(!localStorage.getItem('loggedIn')){
+    document.getElementById('login').classList.add('active');
+    document.querySelectorAll('.page').forEach(p => { if(p.id!=='login') p.classList.remove('active'); });
+    return;
+  }
+  document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+  document.getElementById(pageId).classList.add('active');
+}
+function login(){
+  const user=document.getElementById('username').value;
+  const pass=document.getElementById('password').value;
+  if(user==='admin' && pass==='admin'){
+    localStorage.setItem('loggedIn','true');
+    showPage('home');
+  } else alert('Invalid credentials!');
+}
+function logout(){
+  localStorage.removeItem('loggedIn');
+  showPage('login');
+}
+
+// Sidebar toggle
+function toggleSection(id){
+  const sec=document.getElementById(id);
+  sec.style.display=sec.style.display==='block' ? 'none' : 'block';
+}
+
+// Open app in new tab
+function openApp(appId){
+  window.open(`http://127.0.0.1:850${appId.slice(3)}/`,'_blank');
+}
+
+// Theme toggle
+function toggleTheme(){
+  document.body.classList.toggle('dark');
+}
+
+// Sort Table
+function sortTable(n){
+  const table=document.getElementById("tradeTable");
+  let switching=true, dir="asc";
+  while(switching){
+    switching=false;
+    const rows=table.rows;
+    for(let i=1;i<rows.length-1;i++){
+      let shouldSwitch=false;
+      let x=rows[i].getElementsByTagName("TD")[n];
+      let y=rows[i+1].getElementsByTagName("TD")[n];
+      if(dir==="asc" ? x.innerHTML>y.innerHTML : x.innerHTML<y.innerHTML){
+        shouldSwitch=true; break;
+      }
+    }
+    if(shouldSwitch){
+      rows[i].parentNode.insertBefore(rows[i+1],rows[i]);
+      switching=true;
+    } else if(dir==="asc"){ dir="desc"; switching=true; }
+  }
+}
+
+// Initialize charts
+Plotly.newPlot('portfolioChart', [{x:[1,2,3,4],y:[100,200,150,250],type:'scatter',mode:'lines+markers'}]);
+Plotly.newPlot('riskChart', [{labels:['Market','Credit','Liquidity'],values:[30,50,20],type:'pie'}]);
+Plotly.newPlot('exposureChart', [{x:['SPX','AAPL','GOOG'],y:[500,300,400],type:'bar'}]);
+Plotly.newPlot('pnlChart', [{x:['Mon','Tue','Wed','Thu'],y:[500,200,-100,300],type:'bar'}]);
+Plotly.newPlot('riskReportChart', [{x:['VaR','CVaR','Delta'],y:[100,120,80],type:'bar'}]);
+Plotly.newPlot('livePnlChart', [{x:[0],y:[0],mode:'lines+markers',line:{color:'lime'}}]);
+Plotly.newPlot('livePositionsChart', [{x:['SPX','AAPL','GOOG'],y:[0,0,0],type:'bar'}]);
+
+// Simulate live updates
+setInterval(()=>{
+  const y=[Math.random()*500,Math.random()*400,Math.random()*300];
+  Plotly.update('livePositionsChart',{y:[y]});
+  const pnl=Math.random()*1000-500;
+  Plotly.extendTraces('livePnlChart',{y:[[pnl]]},[0]);
+},2000);
+</script>
 </body>
 </html>
