--- a/blog_post_P2_bk2.html
+++ b/blog_post_P2_bk2.html
@@ -1,179 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Heston Model Calibration for Volatility</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- MathJax for Mathematical Rendering -->
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async
-    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
-  <style>
-    :root {
-      --primary-color: #1a237e;
-      --background-color: #f4f6f8;
-      --container-bg: #ffffff;
-      --text-color: #2c3e50;
-      --heading-color: #37474f;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quantitative Dashboard</title>
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<!-- Font Awesome for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: var(--background-color);
-      color: var(--text-color);
-      margin: 0;
-      padding: 0;
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+        background: #f4f6f8;
     }
-
-    .container {
-      max-width: 960px;
-      margin: auto;
-      padding: 2em 1.5em;
-      background-color: var(--container-bg);
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+    /* Sidebar */
+    .sidebar {
+        height: 100vh;
+        width: 250px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: #1f2937;
+        padding-top: 20px;
+        transition: width 0.3s;
     }
-
-    h1, h2 {
-      color: var(--primary-color);
-      margin-bottom: 0.6em;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: clamp(1.8rem, 3vw, 2.4rem);
-    }
-
-    h2 {
-      font-size: clamp(1.4rem, 2.5vw, 1.75rem);
-      color: var(--heading-color);
-      margin-top: 2em;
-    }
-
-    p, ul {
-      font-size: clamp(1rem, 2.2vw, 1.15rem);
-      line-height: 1.65;
-      margin: 1em 0;
-    }
-
-    ul {
-      padding-left: 1.4em;
-    }
-
-    code {
-      background-color: #e0e0e0;
-      padding: 0.2em 0.4em;
-      border-radius: 4px;
-      font-family: monospace;
-      font-size: 0.95em;
-    }
-
-    .equation {
-      text-align: center;
-      margin: 1.5em 0;
-      overflow-x: auto;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 2em auto 0;
-      border-radius: 8px;
-    }
-
-    @media (max-width: 600px) {
-      .container {
-        padding: 1.2em;
+    .sidebar a {
+        display: flex;
+        align-items: center;
+        padding: 15px 20px;
+        text-decoration: none;
+        font-size: 18px;
+        color: #d1d5db;
+        transition: 0.2s;
         border-radius: 8px;
-      }
-
-      ul {
-        padding-left: 1em;
-      }
+        margin: 5px 10px;
     }
-  </style>
+    .sidebar a i {
+        margin-right: 10px;
+    }
+    .sidebar a:hover {
+        background-color: #374151;
+        color: #fff;
+    }
+    .main {
+        margin-left: 260px;
+        padding: 20px;
+    }
+    .section {
+        display: none;
+        animation: fadeIn 0.5s;
+    }
+    .section.active {
+        display: block;
+    }
+    @keyframes fadeIn {
+        from {opacity: 0;}
+        to {opacity: 1;}
+    }
+    /* App cards */
+    .app-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .app-card {
+        background: #fff;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        text-align: center;
+        cursor: pointer;
+        transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .app-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    }
+    .app-card i {
+        font-size: 40px;
+        margin-bottom: 10px;
+        color: #2563eb;
+    }
+    /* Login modal */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        justify-content: center;
+        align-items: center;
+    }
+    .modal-content {
+        background: #fff;
+        padding: 30px;
+        border-radius: 12px;
+        width: 400px;
+        max-width: 90%;
+        text-align: center;
+    }
+    .modal-content input {
+        width: 80%;
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+    }
+    .modal-content button {
+        padding: 10px 20px;
+        background: #2563eb;
+        color: #fff;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+    .modal-content button:hover {
+        background: #1d4ed8;
+    }
+</style>
 </head>
-
 <body>
-  <div class="container">
-    <h1>Heston Model Calibration for Volatility</h1>
 
-    <p>
-      The Heston model is a popular stochastic volatility model used in <a href="blog_post_P3.html" target="_blank">derivative pricing</a>, particularly for options where implied
-      volatility varies with strike and maturity. It models the underlying asset price and its variance as coupled stochastic
-      processes:
-    </p>
+<!-- Sidebar -->
+<div class="sidebar">
+    <a href="#" onclick="showSection('home')"><i class="fas fa-home"></i> Home</a>
+    <a href="#" onclick="showSection('apps')"><i class="fas fa-th-large"></i> Apps</a>
+    <a href="#" onclick="showSection('analytics')"><i class="fas fa-chart-line"></i> Analytics</a>
+    <a href="#" onclick="showSection('reports')"><i class="fas fa-file-alt"></i> Reports</a>
+    <a href="#" onclick="showSection('settings')"><i class="fas fa-cog"></i> Settings</a>
+    <a href="#" onclick="showSection('help')"><i class="fas fa-question-circle"></i> Help</a>
+    <a href="#" id="loginBtn" onclick="openLoginModal()"><i class="fas fa-user"></i> Login</a>
+</div>
 
-    <div class="equation">
-      $$
-      \begin{aligned}
-      dS_t &= \mu S_t \, dt + \sqrt{v_t} S_t \, dW_t^S \\\\
-      dv_t &= \kappa(\theta - v_t) \, dt + \sigma \sqrt{v_t} \, dW_t^v \\\\
-      dW_t^S \cdot dW_t^v &= \rho \, dt
-      \end{aligned}
-      $$
+<!-- Main content -->
+<div class="main">
+    <!-- Home -->
+    <div id="home" class="section active">
+        <h1>Welcome to the Quantitative Dashboard</h1>
+        <p>Select any app from the Apps menu or explore analytics and reports.</p>
     </div>
 
-    <p>
-      Here, \( S_t \) is the asset price, \( v_t \) the stochastic variance, \( \kappa \) the rate of mean reversion, \( \theta \)
-      the long-run variance, \( \sigma \) the volatility of volatility, and \( \rho \) the correlation between the asset and volatility
-      shocks.
-    </p>
-
-    <h2>Calibration Approach</h2>
-    <p>
-      We calibrate the Heston model to market-observed implied volatilities using a non-linear least squares optimization:
-    </p>
-
-    <div class="equation">
-      $$
-      \text{Loss}(\vec{\theta}) = \sum_{i=1}^N \left[ \text{IV}_{\text{market}}^{(i)} - \text{IV}_{\text{Heston}}^{(i)}(\vec{\theta}) \right]^2
-      $$
+    <!-- Apps -->
+    <div id="apps" class="section">
+        <h2>Streamlit Apps</h2>
+        <div class="app-grid" id="appGrid"></div>
     </div>
 
-    <p>
-      where \( \vec{\theta} = (\kappa, \theta, \sigma, v_0, \rho) \) is the parameter vector. The goal is to minimize the squared
-      differences between market and model implied volatilities across a range of strikes and maturities.
-    </p>
+    <!-- Analytics -->
+    <div id="analytics" class="section">
+        <h2>Analytics</h2>
+        <p>Embed KPIs, charts, or real-time metrics here.</p>
+    </div>
 
-    <h2>Model Validation & Error Surface</h2>
-    <p>
-      After calibration, we analyze the stability of the estimated parameters by perturbing initial conditions and using
-      <em>bootstrapped sub-samples</em> of option chains. The error surface is visualized in 2D and 3D plots to identify
-      <strong>local minima</strong> and degeneracies in parameter space.
-    </p>
+    <!-- Reports -->
+    <div id="reports" class="section">
+        <h2>Reports</h2>
+        <p>Access downloadable reports and CSV/Excel files.</p>
+    </div>
 
-    <p>
-      Additionally, we perform out-of-sample backtesting by comparing pricing errors and hedging performance against the
-      <strong>Black-Scholes</strong> and <strong>SABR</strong> models:
-    </p>
+    <!-- Settings -->
+    <div id="settings" class="section">
+        <h2>Settings</h2>
+        <p>Configure dashboard preferences.</p>
+    </div>
 
-    <ul>
-      <li>Black-Scholes assumes constant volatility, often underpricing OTM options.</li>
-      <li>SABR captures skew but lacks stochastic variance dynamics.</li>
-      <li>Heston performs best in capturing volatility smiles and forward skew.</li>
-    </ul>
+    <!-- Help -->
+    <div id="help" class="section">
+        <h2>Help</h2>
+        <p>Documentation, tutorials, and support links.</p>
+    </div>
+</div>
 
-    <p>
-      The Heston model, while computationally intensive, provides superior calibration performance in capturing market
-      volatility structures. It forms the basis for advanced derivative pricing engines and risk-neutral scenario generators
-      in real-time trading systems.
-    </p>
+<!-- Login Modal -->
+<div class="modal" id="loginModal">
+    <div class="modal-content">
+        <h2>Login</h2>
+        <input type="text" id="username" placeholder="Username"><br>
+        <input type="password" id="password" placeholder="Password"><br>
+        <button onclick="login()">Login</button>
+    </div>
+</div>
 
-    <img src="assets/images/HS.png" alt="Heston surface example" />
- <img src="assets/images/hv.png" alt="Heston surface example" />
+<script>
+    // Populate apps dynamically
+    const appGrid = document.getElementById('appGrid');
+    for(let i=1; i<=20; i++){
+        const card = document.createElement('div');
+        card.className = 'app-card';
+        card.innerHTML = `<i class="fas fa-rocket"></i><h3>App ${i}</h3>`;
+        card.onclick = () => window.open(`http://127.0.0.1:850${i}/app${i}`, '_blank');
+        appGrid.appendChild(card);
+    }
 
- <img src="assets/images/hv2.png" alt="Heston surface example" />
+    // Section switching
+    function showSection(sectionId){
+        document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
+        document.getElementById(sectionId).classList.add('active');
+    }
 
- <img src="assets/images/mc.png" alt="Monte Carlo Simulation" />
+    // Login modal
+    const loginModal = document.getElementById('loginModal');
+    function openLoginModal(){
+        loginModal.style.display = 'flex';
+    }
+    window.onclick = function(event){
+        if(event.target == loginModal){
+            loginModal.style.display = 'none';
+        }
+    }
 
-  </div>
+    // Simple login logic
+    function login(){
+        const user = document.getElementById('username').value;
+        const pass = document.getElementById('password').value;
+        if(user === 'admin' && pass === 'password'){
+            alert('Login successful');
+            loginModal.style.display = 'none';
+            document.getElementById('loginBtn').innerText = 'Logout';
+            document.getElementById('loginBtn').onclick = () => {location.reload()};
+        } else {
+            alert('Invalid credentials');
+        }
+    }
+</script>
+
 </body>
 </html>
