--- a/blog_post_P3.html
+++ b/blog_post_P3.html
@@ -1,144 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Option Pricing and Greeks</title>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async
-    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <style>
-    body {
-      font-family: Georgia, serif;
-      margin: 2rem auto;
-      max-width: 800px;
-      line-height: 1.7;
-      color: #222;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    code {
-      background: #f4f4f4;
-      padding: 2px 4px;
-      border-radius: 4px;
-    }
-    .note {
-      background: #eef;
-      border-left: 4px solid #55f;
-      padding: 0.8rem;
-      margin: 1rem 0;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quant Dashboard Pro – Live Preview</title>
+
+<!-- Google Fonts & Font Awesome -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<!-- Plotly -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+<style>
+:root {
+    --primary: #2563eb;
+    --secondary: #374151;
+    --bg-light: #f4f6f8;
+    --bg-dark: #1f2937;
+    --text-light: #ffffff;
+    --text-dark: #111827;
+}
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background: var(--bg-light);
+    color: var(--text-dark);
+    transition: all 0.3s;
+}
+body.dark {
+    background: var(--bg-dark);
+    color: var(--text-light);
+}
+.sidebar {
+    height: 100vh;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--secondary);
+    padding-top: 20px;
+    transition: width 0.3s;
+}
+.sidebar a {
+    display: flex;
+    align-items: center;
+    padding: 15px 20px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #d1d5db;
+    transition: 0.2s;
+    border-radius: 8px;
+    margin: 5px 10px;
+}
+.sidebar a i {
+    margin-right: 10px;
+}
+.sidebar a:hover {
+    background-color: #4b5563;
+    color: #fff;
+}
+.main {
+    margin-left: 260px;
+    padding: 20px;
+}
+.section {
+    display: none;
+    animation: fadeIn 0.5s;
+}
+.section.active {
+    display: block;
+}
+@keyframes fadeIn { from {opacity: 0;} to {opacity: 1;} }
+
+.app-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+.app-card {
+    background: linear-gradient(145deg, #fff, #e0e7ff);
+    padding: 10px;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s, background 0.3s;
+    position: relative;
+}
+body.dark .app-card {
+    background: linear-gradient(145deg, #374151, #1f2937);
+}
+.app-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+}
+.app-card h3 {
+    margin: 10px 0;
+}
+.app-card iframe {
+    width: 100%;
+    height: 300px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+.status-badge {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: gray;
+}
+.status-online { background: #22c55e; }
+.status-offline { background: #ef4444; }
+
+/* Modal Login */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    background: #fff;
+    padding: 30px;
+    border-radius: 12px;
+    width: 400px;
+    max-width: 90%;
+    text-align: center;
+}
+.modal-content input {
+    width: 80%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+.modal-content button {
+    padding: 10px 20px;
+    background: var(--primary);
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.modal-content button:hover { background: #1d4ed8; }
+
+/* Chart container */
+#chartContainer { width: 100%; height: 400px; margin-top: 20px; }
+</style>
 </head>
 <body>
 
-  <h1>Black-Scholes Option Pricing and Greeks</h1>
+<div class="sidebar">
+    <a href="#" onclick="showSection('home')"><i class="fas fa-home"></i> Home</a>
+    <a href="#" onclick="showSection('apps')"><i class="fas fa-th-large"></i> Apps</a>
+    <a href="#" onclick="showSection('analytics')"><i class="fas fa-chart-line"></i> Analytics</a>
+    <a href="#" onclick="showSection('reports')"><i class="fas fa-file-alt"></i> Reports</a>
+    <a href="#" onclick="showSection('settings')"><i class="fas fa-cog"></i> Settings</a>
+    <a href="#" onclick="showSection('help')"><i class="fas fa-question-circle"></i> Help</a>
+    <a href="#" id="loginBtn" onclick="openLoginModal()"><i class="fas fa-user"></i> Login</a>
+    <a href="#" onclick="toggleTheme()"><i class="fas fa-adjust"></i> Toggle Theme</a>
+</div>
 
-  <h2>1. Black-Scholes Formula</h2>
+<div class="main">
+    <div id="home" class="section active">
+        <h1>Welcome to Quant Dashboard Pro</h1>
+        <p>Explore apps, analytics, and reports with real-time insights.</p>
+    </div>
 
-  <p>
-    For a European call and put option, the Black-Scholes formulas are:
-  </p>
+    <div id="apps" class="section">
+        <h2>Streamlit Apps Live Preview</h2>
+        <div class="app-grid" id="appGrid"></div>
+    </div>
 
-  <p>
-    Call Option: <br>
-    \[
-    C = S_0 \Phi(d_1) - K e^{-rT} \Phi(d_2)
-    \]
-  </p>
+    <div id="analytics" class="section">
+        <h2>Analytics</h2>
+        <div id="chartContainer"></div>
+    </div>
 
-  <p>
-    Put Option: <br>
-    \[
-    P = K e^{-rT} \Phi(-d_2) - S_0 \Phi(-d_1)
-    \]
-  </p>
+    <div id="reports" class="section">
+        <h2>Reports</h2>
+        <p>Download reports and CSV files here.</p>
+    </div>
 
-  <p>Where:</p>
-  <ul>
-    <li>\( d_1 = \frac{\ln(S_0 / K) + (r + \sigma^2 / 2)T}{\sigma \sqrt{T}} \)</li>
-    <li>\( d_2 = d_1 - \sigma \sqrt{T} \)</li>
-    <li>\( \Phi(\cdot) \) is the cumulative standard normal distribution.</li>
-  </ul>
+    <div id="settings" class="section">
+        <h2>Settings</h2>
+        <p>Adjust dashboard preferences and themes.</p>
+    </div>
 
-  <div class="note">
-    <strong>Assumptions:</strong>
-    <ul>
-      <li>Underlying follows geometric Brownian motion: \( dS = \mu S dt + \sigma S dW_t \)</li>
-      <li>No dividends, constant interest rate \( r \)</li>
-      <li>No arbitrage, frictionless markets, European-style options</li>
-    </ul>
-  </div>
+    <div id="help" class="section">
+        <h2>Help</h2>
+        <p>Documentation, tutorials, and support links.</p>
+    </div>
+</div>
 
-  <h2>2. Derivation Sketch</h2>
+<div class="modal" id="loginModal">
+    <div class="modal-content">
+        <h2>Login</h2>
+        <input type="text" id="username" placeholder="Username"><br>
+        <input type="password" id="password" placeholder="Password"><br>
+        <button onclick="login()">Login</button>
+    </div>
+</div>
 
-  <p>
-    Using risk-neutral valuation and Ito's Lemma on a portfolio hedged with \(\Delta = \frac{\partial C}{\partial S}\), we derive the Black-Scholes PDE:
-  </p>
+<script>
+const appGrid = document.getElementById('appGrid');
 
-  \[
-  \frac{\partial C}{\partial t} + \frac{1}{2} \sigma^2 S^2 \frac{\partial^2 C}{\partial S^2} + rS \frac{\partial C}{\partial S} - rC = 0
-  \]
+// Create 20 app cards with embedded iframes
+for(let i=1;i<=20;i++){
+    const card = document.createElement('div');
+    card.className = 'app-card';
+    card.innerHTML = `
+        <h3>App ${i}</h3>
+        <div class="status-badge" id="status${i}"></div>
+        <iframe id="iframe${i}" src="http://127.0.0.1:850${i}/app${i}" frameborder="0"></iframe>
+    `;
+    appGrid.appendChild(card);
 
-  <p>
-    Solving this PDE with terminal condition \( C(S,T) = \max(S - K, 0) \) gives the Black-Scholes formula.
-  </p>
+    // Check app status
+    fetch(`http://127.0.0.1:850${i}/app${i}`)
+        .then(r => document.getElementById(`status${i}`).classList.add('status-online'))
+        .catch(err => document.getElementById(`status${i}`).classList.add('status-offline'));
+}
 
-  <h2>3. Greeks (Sensitivities)</h2>
+// Sections
+function showSection(id){
+    document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+}
 
-  <h3>Delta ( \( \Delta \) )</h3>
-  <p>
-    Sensitivity to underlying asset price.
-  </p>
-  \[
-  \Delta_{\text{call}} = \Phi(d_1), \quad \Delta_{\text{put}} = \Phi(d_1) - 1
-  \]
+// Login
+const loginModal = document.getElementById('loginModal');
+function openLoginModal(){ loginModal.style.display='flex'; }
+window.onclick = e => { if(e.target==loginModal) loginModal.style.display='none'; }
+function login(){
+    const user=document.getElementById('username').value;
+    const pass=document.getElementById('password').value;
+    if(user==='admin' && pass==='password'){
+        alert('Login successful');
+        loginModal.style.display='none';
+        document.getElementById('loginBtn').innerText='Logout';
+        document.getElementById('loginBtn').onclick=()=>{location.reload()};
+    }else{ alert('Invalid credentials'); }
+}
 
-  <h3>Gamma ( \( \Gamma \) )</h3>
-  <p>
-    Sensitivity of delta to price changes.
-  </p>
-  \[
-  \Gamma = \frac{\phi(d_1)}{S_0 \sigma \sqrt{T}}, \quad \text{same for calls and puts}
-  \]
+// Theme toggle
+function toggleTheme(){ document.body.classList.toggle('dark'); }
 
-  <h3>Vega</h3>
-  <p>
-    Sensitivity to volatility.
-  </p>
-  \[
-  \text{Vega} = S_0 \phi(d_1) \sqrt{T}
-  \]
-
-  <h3>Theta ( \( \Theta \) )</h3>
-  <p>
-    Time decay.
-  </p>
-  \[
-  \Theta_{\text{call}} = -\frac{S_0 \phi(d_1) \sigma}{2\sqrt{T}} - rK e^{-rT} \Phi(d_2)
-  \]
-  \[
-  \Theta_{\text{put}} = -\frac{S_0 \phi(d_1) \sigma}{2\sqrt{T}} + rK e^{-rT} \Phi(-d_2)
-  \]
-
-  <h3>Rho ( \( \rho \) )</h3>
-  <p>
-    Sensitivity to interest rate.
-  </p>
-  \[
-  \rho_{\text{call}} = K T e^{-rT} \Phi(d_2), \quad \rho_{\text{put}} = -K T e^{-rT} \Phi(-d_2)
-  \]
-
-  <h2>4. Notes</h2>
-  <ul>
-    <li>Greeks are used for hedging: Delta for directional risk, Gamma for convexity, Vega for vol risk.</li>
-    <li>Put-Call parity: \( C - P = S_0 - K e^{-rT} \)</li>
-    <li>Black-Scholes fails for American options with early exercise or dividends.</li>
-  </ul>
-
-  <footer style="margin-top: 3rem; font-size: 0.9rem; color: #888;">
-    &copy; 2025 | BSM | Quantitative Finance by Ratanlal Mahanta
-  </footer>
+// Plotly Chart
+const chartData = [{
+    x: ['Jan','Feb','Mar','Apr','May','Jun'],
+    y: [10,15,13,17,22,19],
+    type: 'scatter',
+    mode: 'lines+markers',
+    marker: {color:'#2563eb'}
+}];
+const layout = {title:'Sample Analytics', paper_bgcolor:'rgba(0,0,0,0)', plot_bgcolor:'rgba(0,0,0,0)'};
+Plotly.newPlot('chartContainer', chartData, layout, {responsive:true});
+</script>
 </body>
 </html>
